--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
 ﻿- Delete pull
 - Fix mob icon hovering
+- Small icons pull outline kinda weird (everbloom flowers)
 - Scrollable pulls list
+- Toast on import/export
