--- a/TODO
+++ b/TODO
@@ -1,6 +1,4 @@
-﻿- Memoize PullOutline (just use redux)
-- Sidebar component
-- Initial zoom too zoomed in
+﻿- Initial zoom too zoomed in
 - Delete pull
 - Small icons pull outline kinda weird (everbloom flowers)
 - Scrollable pulls list
