improve default zoom

--- a/TODO
+++ b/TODO
@@ -1,5 +1,4 @@
-﻿- Initial zoom too zoomed in
-- Delete pull
+﻿- Delete pull
 - Small icons pull outline kinda weird (everbloom flowers)
 - Scrollable pulls list
 - Toast on import/export
