right click menu

--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-﻿- Delete pull
+﻿- Starting zoom and center positions by dungeon
 - Small icons pull outline kinda weird (everbloom flowers)
 - Scrollable pulls list
 - Toast on import/export
