default zoom per dungeon

--- a/TODO
+++ b/TODO
@@ -1,5 +1,4 @@
-﻿- Starting zoom and center positions by dungeon
-- Small icons pull outline kinda weird (everbloom flowers)
+﻿- Small icons pull outline kinda weird (everbloom flowers)
 - Scrollable pulls list
 - Toast on import/export
 - Mob hover tooltip
