--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-﻿- Small icons pull outline kinda weird (everbloom flowers)
+﻿- Patrol
 - Scrollable pulls list
 - Toast on import/export
 - Mob hover tooltip
