--- a/TODO
+++ b/TODO
@@ -1,6 +1,6 @@
-﻿- Scrollable pulls list
-- Toast on import/export
+﻿- Toast on import/export
 - Mob hover tooltip
 - Mob spells
 - Save/load routes
 - Sample routes
+- New font
