--- a/TODO
+++ b/TODO
@@ -1,7 +1,7 @@
-﻿- Undo
-- Mob hover stuck
+﻿- Mob hover stuck
 - Mob hover tooltip
 - Mob spells
 - Save/load routes
 - Sample routes
 - New font
+- Keyboard shortcut hints
