--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-﻿- Mob hover stuck
+﻿- Select individual mobs
 - Mob hover tooltip
 - Mob spells
 - Save/load routes
@@ -6,4 +6,9 @@
 - New font
 - Keyboard shortcut hints
 - Rework sidebar
-- Try using noise texture on pull bars
+- Donate button
+- Google analytics
+
+Questionable
+- Mob hover stuck
+- Drag a rectangle to select multiple groups
