select individual mobs

--- a/TODO
+++ b/TODO
@@ -1,8 +1,7 @@
-﻿- Select individual mobs
-- Mob hover tooltip
+﻿- Mob hover tooltip
 - Mob spells
 - Save/load routes
-- Keyboard shortcut hints
+- Instructions page, keyboard shortcut hints
 - Rework sidebar
 - Donate button
 - Google analytics
