improve mob tooltip

--- a/TODO
+++ b/TODO
@@ -1,10 +1,11 @@
-﻿- Mob hover tooltip
-- Mob spells
+﻿- Mob spells
 - Save/load routes
 - Instructions page, keyboard shortcut hints
 - Rework sidebar
 - Donate button
 - Google analytics
+- Import from URL
+- Pull hover tooltip
 
 Questionable
 - Mob hover stuck
