--- a/TODO
+++ b/TODO
@@ -1,7 +1,7 @@
 ﻿- Import MDT
 -- Overwrite current or existing??
 -- Popup vs clipboard
-- Import from URL
+- Share URL - clear url after or something?
 
 - Pulls progress bar
 - Mob spells
