--- a/TODO
+++ b/TODO
@@ -1,9 +1,4 @@
-﻿- Import MDT
--- Warn before overwriting current
--- Popup vs clipboard
-
-- Pulls progress bar
-- Mob spells
+﻿- Mob spells
 - Instructions page, keyboard shortcut hints
 - Donate button
 - Google analytics
