--- a/TODO
+++ b/TODO
@@ -1,8 +1,14 @@
 ﻿- Mob spells
 - Instructions page, keyboard shortcut hints
+- Pull hover tooltip
+- Collapsible sidebar
+- Warning on clear pulls
+- Drawing on map
+- Notes
+
+Later
 - Donate button
 - Google analytics
-- Pull hover tooltip
 
 Questionable
 - Live editing with others
