import export error handling

--- a/TODO
+++ b/TODO
@@ -1,8 +1,10 @@
-﻿- Mob spells
+﻿- Import from clipboard popup
+- Warning on clear pulls
+
+- Mob spells
 - Instructions page, keyboard shortcut hints
 - Pull hover tooltip
 - Collapsible sidebar
-- Warning on clear pulls
 - Drawing on map
 - Notes
 
