warning on clear pulls

--- a/TODO
+++ b/TODO
@@ -1,7 +1,4 @@
-﻿- Import from clipboard popup
-- Warning on clear pulls
-
-- Mob spells
+﻿- Mob spells
 - Instructions page, keyboard shortcut hints
 - Pull hover tooltip
 - Collapsible sidebar
