--- a/TODO
+++ b/TODO
@@ -1,7 +1,8 @@
-﻿- Mob spells
+﻿- Backspace should select previous pull after deleting
+- Collapsible sidebar
+- Mob spells
 - Instructions page, keyboard shortcut hints
 - Pull hover tooltip
-- Collapsible sidebar
 - Drawing on map
 - Notes
 
