backspace/delete pull different

--- a/TODO
+++ b/TODO
@@ -1,5 +1,4 @@
-﻿- Backspace should select previous pull after deleting
-- Import > delete > undo creates weird pull outline colors
+﻿- Import > delete > undo creates weird pull outline colors
 - Collapsible sidebar
 - Mob spells
 - Instructions page, keyboard shortcut hints
