fix pull outline color on delete

--- a/TODO
+++ b/TODO
@@ -1,5 +1,4 @@
-﻿- Import > delete > undo creates weird pull outline colors
-- Collapsible sidebar
+﻿- Collapsible sidebar
 - Mob spells
 - Instructions page, keyboard shortcut hints
 - Pull hover tooltip
