--- a/TODO
+++ b/TODO
@@ -1,5 +1,4 @@
-﻿- Collapsible sidebar
-- Mob spells
+﻿- Mob spells
 - Instructions page, keyboard shortcut hints
 - Pull hover tooltip
 - Drawing on map
