--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
-﻿- Mob spells
+﻿- Error handling if route is in invalid state
+- Mob spells
 - Instructions page, keyboard shortcut hints
 - Drawing on map
 - Notes
