--- a/TODO
+++ b/TODO
@@ -1,5 +1,4 @@
-﻿- Error handling if route is in invalid state
-- Mob spells
+﻿- Mob spells
 - Instructions page, keyboard shortcut hints
 - Drawing on map
 - Notes
