--- a/TODO
+++ b/TODO
@@ -2,12 +2,14 @@
 - Instructions page, keyboard shortcut hints
 - Drawing on map
 - Notes
+- Blurry mob icons compared to guru
 
-Later
+Before release
 - Donate button
 - Google analytics
 
-Questionable
+Questionable, maybe post release
+- Embed
 - Live editing with others
 - Mob hover stuck
 - Drag a rectangle to select multiple groups
