--- a/TODO
+++ b/TODO
@@ -3,6 +3,7 @@
 - Drawing on map
 - Notes
 - Blurry mob icons compared to guru
+- Figure out how to get npc portaits
 
 Before release
 - Donate button
