--- a/TODO
+++ b/TODO
@@ -1,6 +1,4 @@
-﻿- Copy paste npc/spell ids
-- Portrait gathering from addons
-- Instructions page, keyboard shortcut hints
+﻿- Instructions page, keyboard shortcut hints
 - Drawing on map
 - Notes
 - Blurry mob icons compared to guru
