polylines with gaps

--- a/TODO
+++ b/TODO
@@ -1,8 +1,10 @@
-﻿- Instructions page, keyboard shortcut hints
+﻿- Fix export
+- Instructions page, keyboard shortcut hints
 - Drawing on map
 - Notes
 - Blurry mob icons compared to guru
 - Figure out how to get npc portaits
+- Always overwrite imported route option
 
 Before release
 - Donate button
