notes wip, remember sidebar collapsed state

--- a/TODO
+++ b/TODO
@@ -1,7 +1,7 @@
-﻿- Fix export
+﻿- Notes
+- Fix export
 - Instructions page, keyboard shortcut hints
 - Drawing on map
-- Notes
 - Blurry mob icons compared to guru
 - Figure out how to get npc portaits
 - Always overwrite imported route option
