--- a/TODO
+++ b/TODO
@@ -1,10 +1,10 @@
-﻿- Notes
-- Fix export
+﻿- Fix export
 - Instructions page, keyboard shortcut hints
 - Drawing on map
 - Blurry mob icons compared to guru
 - Figure out how to get npc portaits
 - Always overwrite imported route option
+- One context menu at a time
 
 Before release
 - Donate button
