--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
-﻿- Instructions page, keyboard shortcut hints
+﻿- Shift drag select mobs
+- Instructions page, keyboard shortcut hints
 - Blurry mob icons compared to guru
 
 Before release
