rectangle select with preview

--- a/TODO
+++ b/TODO
@@ -1,6 +1,4 @@
-﻿- Shift drag select mobs
--- Preview?
-
+﻿- Cleaner context menu button shortcuts
 - Do not store MobSpawn in route definition
 - Instructions page, keyboard shortcut hints
 - Blurry mob icons compared to guru
