button icons and shortcuts

--- a/TODO
+++ b/TODO
@@ -1,8 +1,9 @@
-﻿- Cleaner context menu button shortcuts
-- Do not store MobSpawn in route definition
+﻿- Do not store MobSpawn in route definition
+- Debounce box hover
 - Instructions page, keyboard shortcut hints
 - Blurry mob icons compared to guru
 - Mob hover stuck
+- Mob count tracking somehow
 
 Before release
 - Donate button
