don't store MobSpawn in Route

--- a/TODO
+++ b/TODO
@@ -1,6 +1,6 @@
-﻿- Do not store MobSpawn in route definition
-- Debounce box hover
+﻿- Debounce box hover
 - Instructions page, keyboard shortcut hints
+- Tips
 - Blurry mob icons compared to guru
 - Mob hover stuck
 - Mob count tracking somehow
