--- a/TODO
+++ b/TODO
@@ -1,9 +1,9 @@
-﻿- Debounce box hover
-- Instructions page, keyboard shortcut hints
+﻿- Instructions page, keyboard shortcut hints
 - Tips
 - Blurry mob icons compared to guru
 - Mob hover stuck
 - Mob count tracking somehow
+- S4 dungeons
 
 Before release
 - Logo
