--- a/TODO
+++ b/TODO
@@ -8,11 +8,11 @@
 Before release
 - Logo
 - Google analytics
+- Discord link
 
 Questionable, maybe post release
 - Embed
 - Live editing with others
-- Drag a rectangle to select multiple groups
 - Sample routes
 - Drawing on map
-- Figure out how to get npc portaits
+- Npc portaits
