add pull to end shortcut

--- a/TODO
+++ b/TODO
@@ -1,5 +1,4 @@
-﻿- Instructions page, keyboard shortcut hints
-- Tips
+﻿- Tips
 - Blurry mob icons compared to guru
 - Mob hover stuck
 - Mob count tracking somehow
