copy paste shortcuts

--- a/TODO
+++ b/TODO
@@ -3,6 +3,8 @@
 - Mob hover stuck
 - Mob count tracking somehow
 - S4 dungeons
+- Dungeon name too long doesn't fit
+- Import Andy -> Clear -> Undo clears dungeon name
 
 Before release
 - Logo
