--- a/TODO
+++ b/TODO
@@ -1,5 +1,4 @@
-﻿- Tips
-- Blurry mob icons compared to guru
+﻿- Blurry mob icons compared to guru
 - Mob hover stuck
 - Mob count tracking somehow
 - S4 dungeons
