--- a/TODO
+++ b/TODO
@@ -2,6 +2,8 @@
 - Mob hover stuck
 - Mob count tracking somehow
 - S4 dungeons
+- Clear drawings
+- Collapse dropdown when clicking outside
 
 Before release
 - Logo
