disable gridlines fix on mac

--- a/TODO
+++ b/TODO
@@ -9,6 +9,7 @@ Before release
 - Nokhud zoom
 
 Questionable, maybe post release
+- Grid lines
 - Embed
 - Live editing with others
 - Sample routes
