--- a/TODO
+++ b/TODO
@@ -1,4 +1,7 @@
-﻿- Blurry mob icons compared to guru
+﻿Collab
+- Remove lodash
+
+- Blurry mob icons compared to guru
 - Font flicker
 
 Before release
