more color work

--- a/TODO
+++ b/TODO
@@ -1,5 +1,9 @@
 ﻿Collab
 - Remove isEqual
+- List of clients
+- Promote to host
+- Backup route
+- Debounce cursor?
 
 - Blurry mob icons compared to guru
 - Font flicker
