--- a/TODO
+++ b/TODO
@@ -3,17 +3,13 @@
 - Promote to host
 - Backup route
 
-- Blurry mob icons compared to guru
-- Font flicker
-
-Before release
+- Handling incompatibile dungeons and routes
+- Handle 
 - Logo
-- Nokhud zoom
 
 Questionable, maybe post release
 - S4 dungeons
-- Grid lines
+-- Nokhud zoom
 - Embed
-- Live editing with others
 - Drawing on map
 - Npc portaits
