--- a/TODO
+++ b/TODO
@@ -2,6 +2,7 @@
 - Backup route
 - Promote to host
 - Remove isEqual
+- Try something else than Render
 
 - Handling incompatibile dungeons and routes
 - Handle 
