check for multiple hosts

--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 ﻿Collab
+- Joining a collab doesn't retrieve remote data. It triggers a "local" change first.
 - Prevent guest from modifying route id at all costs
 - Backup route
 - Promote to host
