--- a/TODO
+++ b/TODO
@@ -3,6 +3,7 @@
 - What if guest has route id that matches collab?
 - Backup route
 - Request promotion to host, or host promotes a guest
+- Consider what happens when route is bugged during collab
 
 - Handling incompatible dungeons and routes
 - Logo
