--- a/TODO
+++ b/TODO
@@ -7,6 +7,7 @@
 - Handling incompatible dungeons and routes
 - Pull % hard to read
 - Drawing on map
+- Mobile add pull while sidebar collapsed
 - Hire QA dude
 
 Questionable, maybe post release
