--- a/TODO
+++ b/TODO
@@ -3,9 +3,13 @@
 - Backup route
 - Request promotion to host, or host promotes a guest
 
+Drawing
+- Simplify polygons
+- Configure weight
+- Set draw color based on collab color
+
 - Handling incompatible dungeons and routes
 - Pull % hard to read
-- Drawing on map
 - Mobile - add pull while sidebar collapsed, delete pull
 - Hire QA dude
 
