--- a/TODO
+++ b/TODO
@@ -4,15 +4,16 @@
 - Request promotion to host, or host promotes a guest
 
 Drawing
-- Simplify polygons
 - Configure weight
 - Set draw color based on collab color
+- Does MDT draw over mobs? Does MDT allow hovering over mobs while drawing?
 
 - Pull % hard to read
 - Mobile - add pull while sidebar collapsed, delete pull
 - Hire QA dude
 
 Questionable, maybe post release
+- Erase parts of drawings
 - S4 dungeons
 -- Nokhud zoom
 - Embed
