draw color based on collab color

--- a/TODO
+++ b/TODO
@@ -4,8 +4,8 @@
 - Request promotion to host, or host promotes a guest
 
 Drawing
+- Drawing disapears when cursor leaves map
 - Configure weight
-- Set draw color based on collab color
 - Does MDT draw over mobs? Does MDT allow hovering over mobs while drawing?
 
 - Pull % hard to read
