--- a/TODO
+++ b/TODO
@@ -4,7 +4,6 @@
 - Request promotion to host, or host promotes a guest
 
 Drawing
-- Configure weight
 - Does MDT draw over mobs? Does MDT allow hovering over mobs while drawing?
 
 - Pull % hard to read
@@ -13,7 +12,10 @@ Drawing
 
 Questionable, maybe post release
 - Erase parts of drawings
+- Change color wheel to grid of colors
 - S4 dungeons
 -- Nokhud zoom
 - Embed
+
+Definitely post release
 - Npc portaits
