mobile friendly mini pulls

--- a/TODO
+++ b/TODO
@@ -1,16 +1,15 @@
-﻿Collab
-- Password?
-
-- Pull % hard to read
-- Mobile - add pull while sidebar collapsed, delete pull
+﻿- Pull % hard to read on Windows
 - Hire QA dude
+- Button default should be short
 
 Questionable, maybe post release
+- Import from WCL
 - Erase parts of drawings
 - Change color wheel to grid of colors
-- S4 dungeons
--- Nokhud zoom
 - Embed
+- Collab password 
 
 Definitely post release
 - Npc portaits
+- S4 dungeons
+-- Nokhud zoom
