more mobile pulls improvements

--- a/TODO
+++ b/TODO
@@ -1,11 +1,13 @@
 ﻿- Pull % hard to read on Windows
-- Hire QA dude
 - Button default should be short
+- Drawing on mobile?
+- Hire QA dude
 
 Questionable, maybe post release
 - Import from WCL
 - Erase parts of drawings
 - Change color wheel to grid of colors
+- Drag pull out of list to delete?
 - Embed
 - Collab password 
 
