mobile tap improvements

--- a/TODO
+++ b/TODO
@@ -3,7 +3,7 @@
 - Hire QA dude
 
 Mobile
-- Tapping on Sample Route or a Pull triggers Hover first
+- Tapping on a Pull triggers Hover first
 
 Questionable, maybe post release
 - Import from WCL
