--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
-﻿- NEC link
+- NEC link
 - QA
 - Announcement
+- Don't have WCL api key in git
 
 Questionable, maybe post release
 - Erase parts of drawings
