bigger note edit box

--- a/TODO
+++ b/TODO
@@ -1,16 +1,17 @@
-﻿- Button default should be short
-- Hire QA dude
+﻿- Find source of console violations?
+- QA
+- Announcement
 
 Mobile
 - Tapping on a Pull triggers Hover first
 
 Questionable, maybe post release
-- Import from WCL
 - Erase parts of drawings
 - Change color wheel to grid of colors
 - Embed
 - Collab password 
 - Mobile Drawing
+- Import from WCL
 
 Definitely post release
 - Npc portaits
