--- a/TODO
+++ b/TODO
@@ -8,12 +8,13 @@ Mobile
 Questionable, maybe post release
 - Erase parts of drawings
 - Change color wheel to grid of colors
-- Embed
-- Collab password 
 - Mobile Drawing
-- Import from WCL
 
 Definitely post release
 - Npc portaits
 - S4 dungeons
 -- Nokhud zoom
+- If over %, suggestions on what to drop
+- Embed
+- Collab password 
+- Import from WCL
