fix collab bug, improve collab help, add note help

--- a/TODO
+++ b/TODO
@@ -1,4 +1,8 @@
-﻿- NEC link
+﻿- Don't have WCL api key in git
+- MDT stealth, cc
+- Move/delete drawings
+- Ctrl-C shortcut, can't copy random text
+- NEC link
 - QA
 - Announcement
 
