dotenv for wcl client id/secret

--- a/TODO
+++ b/TODO
@@ -1,5 +1,4 @@
-﻿- Don't have WCL api key in git
-- MDT stealth, cc
+﻿- MDT stealth, cc
 - Move/delete drawings
 - Ctrl-C shortcut, can't copy random text
 - NEC link
