import button loading state

--- a/TODO
+++ b/TODO
@@ -7,8 +7,8 @@ Questionable, maybe post release
 WCL
 - Persist WCL token somehow? https://vercel.com/docs/storage/vercel-kv/quickstart
 - Test more logs. Prob need to adjust 20s period
-- Loading button state
 - Rate limiting?
+- Confirm overwrite like MDT 
 
 Definitely post release
 - Npc portaits
