--- a/TODO
+++ b/TODO
@@ -1,14 +1,11 @@
-﻿- NEC link
-- Announcement
-
-Questionable, maybe post release
+﻿- Logo shouldn't be clickable
+- Import from WCL
 - Mobile Drawing
-
-Definitely post release
-- Npc portaits
 - S4 dungeons
 -- Nokhud zoom
 - If over %, suggestions on what to drop
 - Embed
+
+Harder
+- Npc portaits
 - Collab password 
-- Import from WCL
