--- a/TODO
+++ b/TODO
@@ -1,12 +1,12 @@
-﻿- Pull tooltip
-- Logo shouldn't be clickable
-- Import from WCL
-- Mobile Drawing
+﻿- Mobile Drawing
 - S4 dungeons
 -- Nokhud zoom
-- If over %, suggestions on what to drop
-- Embed
+- Live mode 
+-- Navigate pulls
+-- Suggestions on what to add/drop
 
 Harder
+- Embed
 - Npc portaits
 - Collab password 
+- Import from WCL
