--- a/TODO
+++ b/TODO
@@ -1,8 +1,6 @@
-﻿- S4 dungeons
--- Nokhud zoom
-- Live mode 
--- Navigate pulls
+﻿- Live mode
 -- Suggestions on what to add/drop
+-- Show note contents if within pull 
 
 Harder
 - Embed
