pull outline tooltip not updating when points change

--- a/TODO
+++ b/TODO
@@ -1,4 +1,6 @@
-﻿- Live mode
+﻿- Mob tooltip too close when zoomed in
+
+- Live mode
 -- Suggestions on what to add/drop
 -- Show note contents if within pull 
 
