show mob count/group when holding ctrl/alt

--- a/TODO
+++ b/TODO
@@ -1,4 +1,7 @@
-﻿- Mob tooltip too close when zoomed in
+﻿- Hold Ctrl/Alt
+-- Group doesn't fit
+
+- Mob tooltip too close when zoomed in
 
 - Live mode
 -- Suggestions on what to add/drop
