fix tooltip pos

--- a/TODO
+++ b/TODO
@@ -1,9 +1,4 @@
-﻿- Hold Ctrl/Alt
--- Group doesn't fit
-
-- Mob tooltip too close when zoomed in
-
-- Live mode
+﻿- Live mode
 -- Suggestions on what to add/drop
 -- Show note contents if within pull 
 
