interrupt/stop (wip)

--- a/TODO
+++ b/TODO
@@ -1,4 +1,9 @@
-﻿- Live mode
+﻿- More spell data
+-- Interrupt/stop
+-- Dispel
+-- Purge
+
+- Live mode
 -- Suggestions on what to add/drop
 -- Show note contents if within pull 
 
