--- a/TODO
+++ b/TODO
@@ -1,7 +1,6 @@
-﻿- More spell data
--- Interrupt/stop
--- Dispel
--- Purge
+﻿New season
+- Sample routes
+
 
 - Live mode
 -- Suggestions on what to add/drop
