--- a/TODO
+++ b/TODO
@@ -1,7 +1,7 @@
 ﻿New season
 - Sample routes
 
-
+- F to focus pull
 - Live mode
 -- Suggestions on what to add/drop
 -- Show note contents if within pull 
