top 5 runs of each dungeon

--- a/TODO
+++ b/TODO
@@ -11,3 +11,16 @@ WCL
 
 Harder
 - Embed
+
+
+routes with errors:
+- BGbq4maJ1YQPwZTc-16
+- YpCH6XP1vqr4MdNB-17
+- wmbVCJYLMzBy23rg-35
+- hywrxQ6qHav2j9cT-1
+- PgJcBTz6vDq9tR71-73
+- BGbq4maJ1YQPwZTc-16
+- rdmXK8FjyRWHqNZn-74
+- NkyRVFLXCY8KWQmh-14
+- hFxPcjByHgzW8J1Z-96
+- 6R74kfPZxjQCzd8X-41
