--- a/TODO
+++ b/TODO
@@ -1,19 +1,2 @@
 Sample routes
-- Automate
-
-WCL
-- Proper vercel blob or redis caching
-
-- F to focus pull
-- Live mode
--- Suggestions on what to add/drop
--- Show note contents if within pull 
-
-Harder
-- Embed
-
-
-routes with errors:
-- https://www.warcraftlogs.com/reports/NkyRVFLXCY8KWQmh#fight=14
-- https://www.warcraftlogs.com/reports/hFxPcjByHgzW8J1Z#fight=96
-- https://www.warcraftlogs.com/reports/6R74kfPZxjQCzd8X#fight=41
+- Lust
